==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.8 to Asterisk 1.10 -----------------
------------------------------------------------------------------------------

Parking
-------
 * parkedmusicclass can now be set for non-default parking lots.

Asterisk Manager Interface
--------------------------
 * PeerStatus now includes Address and Port.
 * Added Hold events for when the remote party puts the call on and off hold
   for chan_dahdi ISDN channels.
 * Added new action MeetmeListRooms to list active conferences (shows same
   data as "meetme list" at the CLI).
 * DAHDIShowChannels, SIPshowpeer, SIPpeers, and IAXpeers now contains a
   Description field that is set by 'description' in the channel configuration
   file.
 * Added Uniqueid header to UserEvent.

Asterisk HTTP Server
--------------------------
 * The HTTP Server can bind to IPv6 addresses.

chan_dahdi
--------------------------
 * Busy tone patterns featuring 2 silence and 2 tone lengths can now be used
   with busydetect.  usage example: busypattern=200,200,200,600

CLI Changes
--------------------------
 * New 'gtalk show settings' command showing the current settings loaded from
   gtalk.conf.
 * The 'logger reload' command now supports an optional argument, specifying an
   alternate configuration file to use.
 * 'dialplan add extension' command will now automatically create a context if
   the specified context does not exist with a message indicated it did so.
 * 'sip show peers', 'iax show peers', and 'dahdi show peers' now contains a
   Description field which can be populated with 'description' in the channel
   configuration files (sip.conf, iax2.conf, and chan_dahdi.conf).

CDR
--------------------------
 * The filter option in cdr_adaptive_odbc now supports negating the argument,